opam-version: "2.0"
name: "cloudi"
version: "2.0.2"
maintainer: "Michael Truog <mjtruog at protonmail dot com>"
authors: "Michael Truog <mjtruog at protonmail dot com>"
homepage: "https://cloudi.org/"
bug-reports: "https://github.com/CloudI/CloudI/issues"
license: "MIT"
dev-repo: "git+https://github.com/CloudI/cloudi_api_ocaml.git"
build: [
  [make]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "base-unix"
  "num"
]
synopsis: "OCaml CloudI API"
