opam-version: "2.0"
name: "cloudi"
version: "2.0.5"
maintainer: "Michael Truog <mjtruog at protonmail dot com>"
authors: "Michael Truog <mjtruog at protonmail dot com>"
homepage: "https://cloudi.org/"
bug-reports: "https://github.com/CloudI/cloudi_api_ocaml/issues"
license: "MIT"
dev-repo: "git+https://github.com/CloudI/cloudi_api_ocaml.git"
build: [
  [make]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "base-unix"
  "zarith" {>= "1.12"}
]
synopsis: "OCaml CloudI API"
